--- a/src/app/components/sidenav-right/sidenav-right.scss
+++ b/src/app/components/sidenav-right/sidenav-right.scss
@@ -1,26 +1,6 @@
 md-sidenav.site-sidenav.md-sidenav-right {
   
-  background-color: transparent;
   @include element-width($sidenav-right-width);
-
-  > header {
-    background-color: $md-primary-hue-2;
-    text-align: center;
-    padding-top: 12px;
-    min-height: 140px;
-
-    > img {
-      @include element-height(128px);
-      @include element-width(128px);
-      @include border-radius(64px);
-      margin: 0 auto;
-    }
-
-  }
-
-  .md-subhead {
-    padding-bottom: 16px;
-  }
 
   .md-subheader {
     .md-subheader-inner {
