--- a/src/app/styles/structure.scss
+++ b/src/app/styles/structure.scss
@@ -15,11 +15,13 @@
   .site-inner {
     //overflow: hidden;
     .site-main {
-      //overflow-y: scroll;
-      //overflow-x: hidden;
-      padding-left: 5%;
-      padding-right: 5%;
-      padding-top; 24px;
+      /*
+      @media (min-width: 600px) {
+        padding-left: 10vw;
+        padding-right: 10vw;
+        padding-top: 10vh;
+      }
+      */
      
     }
   }
