--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -16,16 +16,7 @@ $md-primary-hue-1:      rgb(121, 134, 203);
 $md-primary-hue-2:      rgb(40, 53, 147);
 $md-primary-hue-2-font: rgba(255, 255, 255, 0.870588);
 $md-primary-hue-3:      rgb(140, 158, 255);
-//$md-primary-base:       rgb(158, 158, 158);
-//$md-primary-hue-1:      rgb(224, 224, 224);
-//$md-primary-hue-2:      rgb(66, 66, 66);
-//$md-primary-hue-3:      rgb(255, 255, 255);
 
-$md-accent-font:        rgba(255, 255, 255, 1);
-$md-accent-base:        rgb(255, 205, 210);
-$md-accent-hue-1:       rgb(255, 138, 128);
-$md-accent-hue-2:       rgb(255, 23, 68);
-$md-accent-hue-3:       rgb(213, 0, 0);
 
 // Base Typography
 // ------------------------------
@@ -33,5 +24,5 @@ $font-family-base:    Ubuntu, sans-serif;
 
 // Sidenavs
 // ------------------------------
-$sidenav-right-width:  272px;
-$sidenav-left-width: auto;
+$sidenav-right-width:   272px;
+$sidenav-left-width:    256px;
